<resources>
    <string name="app_name">My Project</string>
    <string name="lets_start">Let\'s Start!</string>
    <string name="start_now">Start Now</string>
    <string name="efficiently_and_effectively">efficiently and effectively</string>
    <string name="learn_at_home">Learn at home!</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="get_unlimited_access">Get unlimited access!</string>
    <string name="montlyText">Montly</string>
    <string name="yearlyText">Yearly</string>
    <string name="montlyPrice">$11.99</string>
    <string name="yearlyPrice">$4.99</string>
    <string name="perMonth">per month</string>
    <string name="perYear">per year</string>
    <string name="yearly_perYear">$59.99</string>
    <string name="montly_perYear">$143.99</string>
    <string name="buttonText">Go Premium</string>
</resources>