<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="231dp"
            android:layout_height="244dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_main_image" />

        <TextView
            android:id="@+id/learnathome"
            android:layout_width="323dp"
            android:layout_height="58dp"
            android:layout_marginTop="60dp"
            android:text="@string/learn_at_home"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            style="@style/EntryTitleStyle" />

        <Button
            android:id="@+id/button"
            android:layout_width="186dp"
            android:layout_height="58dp"
            android:layout_marginTop="52dp"
            android:backgroundTint="#2C2B47"
            android:text="@string/start_now"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/effective" />

        <TextView
            android:id="@+id/effective"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/efficiently_and_effectively"
            app:layout_constraintEnd_toEndOf="@+id/learnathome"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/learnathome"
            app:layout_constraintTop_toBottomOf="@+id/learnathome"
            style="@style/HomeSubTitleStyle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
