<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PremiumActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="255dp"
            android:layout_height="198dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_illustration" />

        <TextView
            android:id="@+id/textView3"
            style="@style/EntryTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/get_unlimited_access"
            android:textAlignment="center"
            android:textSize="38sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/montlyInfoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.149"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:srcCompat="@drawable/ic_block" />

        <ImageView
            android:id="@+id/yearlyInfoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toEndOf="@+id/montlyInfoView"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:srcCompat="@drawable/ic_block" />

        <ImageView
            android:id="@+id/montlyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/montlyInfoView"
            app:layout_constraintEnd_toEndOf="@+id/montlyInfoView"
            app:layout_constraintHorizontal_bias="0.823"
            app:layout_constraintStart_toStartOf="@+id/montlyInfoView"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.04"
            app:srcCompat="@drawable/ic_montly" />

        <ImageView
            android:id="@+id/yearlyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/yearlyInfoView"
            app:layout_constraintEnd_toEndOf="@+id/yearlyInfoView"
            app:layout_constraintHorizontal_bias="0.866"
            app:layout_constraintStart_toStartOf="@+id/yearlyInfoView"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.04"
            app:srcCompat="@drawable/ic_yearly" />

        <TextView
            android:id="@+id/montlyText"
            style="@style/infoTime"
            android:layout_width="43dp"
            android:layout_height="11dp"
            android:text="@string/montlyText"
            app:layout_constraintBottom_toBottomOf="@+id/montlyView"
            app:layout_constraintEnd_toEndOf="@+id/montlyView"
            app:layout_constraintStart_toStartOf="@+id/montlyView"
            app:layout_constraintTop_toTopOf="@+id/montlyView" />

        <TextView
            android:id="@+id/yearlyText"
            style="@style/infoTime"
            android:layout_width="37dp"
            android:layout_height="13dp"
            android:text="@string/yearlyText"
            app:layout_constraintBottom_toBottomOf="@+id/yearlyView"
            app:layout_constraintEnd_toEndOf="@+id/yearlyView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/yearlyView"
            app:layout_constraintTop_toTopOf="@+id/yearlyView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/montlyPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/montlyPrice"
            style="@style/price"
            app:layout_constraintBottom_toBottomOf="@+id/montlyInfoView"
            app:layout_constraintEnd_toEndOf="@+id/montlyInfoView"
            app:layout_constraintHorizontal_bias="0.163"
            app:layout_constraintStart_toStartOf="@+id/montlyInfoView"
            app:layout_constraintTop_toTopOf="@+id/montlyInfoView"
            app:layout_constraintVertical_bias="0.203" />

        <TextView
            android:id="@+id/yearlyPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yearlyPrice"
            style="@style/price"
            app:layout_constraintBottom_toBottomOf="@+id/yearlyInfoView"
            app:layout_constraintEnd_toEndOf="@+id/yearlyInfoView"
            app:layout_constraintHorizontal_bias="0.163"
            app:layout_constraintStart_toStartOf="@+id/yearlyInfoView"
            app:layout_constraintTop_toTopOf="@+id/yearlyInfoView"
            app:layout_constraintVertical_bias="0.203" />

        <TextView
            android:id="@+id/perMonthPrice"
            style="@style/perPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/montlyPrice"
            app:layout_constraintBottom_toBottomOf="@+id/montlyInfoView"
            app:layout_constraintEnd_toEndOf="@+id/montlyInfoView"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="@+id/montlyInfoView"
            app:layout_constraintTop_toBottomOf="@+id/montlyPriceText"
            app:layout_constraintVertical_bias="0.039" />

        <TextView
            android:id="@+id/perMonth"
            style="@style/per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/perMonth"
            app:layout_constraintBottom_toBottomOf="@+id/montlyInfoView"
            app:layout_constraintEnd_toEndOf="@+id/montlyInfoView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/perMonthPrice"
            app:layout_constraintTop_toTopOf="@+id/montlyInfoView"
            app:layout_constraintVertical_bias="0.55" />

        <TextView
            android:id="@+id/perMonthPrice_Yearly"
            style="@style/perPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/yearlyPrice"
            app:layout_constraintBottom_toBottomOf="@+id/yearlyInfoView"
            app:layout_constraintEnd_toEndOf="@+id/yearlyInfoView"
            app:layout_constraintHorizontal_bias="0.139"
            app:layout_constraintStart_toStartOf="@+id/yearlyInfoView"
            app:layout_constraintTop_toBottomOf="@+id/yearlyPriceText"
            app:layout_constraintVertical_bias="0.039" />

        <TextView
            android:id="@+id/perMonth_Yearly"
            style="@style/per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/perMonth"
            app:layout_constraintBottom_toBottomOf="@+id/yearlyInfoView"
            app:layout_constraintEnd_toEndOf="@+id/yearlyInfoView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/perMonthPrice_Yearly"
            app:layout_constraintTop_toTopOf="@+id/yearlyInfoView"
            app:layout_constraintVertical_bias="0.55" />

        <TextView
            android:id="@+id/perYearPrice_Montly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/perPrice"
            android:text="@string/montly_perYear"
            app:layout_constraintBottom_toBottomOf="@+id/montlyInfoView"
            app:layout_constraintEnd_toEndOf="@+id/montlyInfoView"
            app:layout_constraintHorizontal_bias="0.163"
            app:layout_constraintStart_toStartOf="@+id/montlyInfoView"
            app:layout_constraintTop_toBottomOf="@+id/perMonthPrice"
            app:layout_constraintVertical_bias="0.045" />

        <TextView
            android:id="@+id/perYear_Monthly"
            style="@style/per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/perYear"
            app:layout_constraintBottom_toBottomOf="@+id/montlyInfoView"
            app:layout_constraintEnd_toEndOf="@+id/montlyInfoView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/perYearPrice_Montly"
            app:layout_constraintTop_toTopOf="@+id/montlyInfoView"
            app:layout_constraintVertical_bias="0.798" />

        <TextView
            android:id="@+id/perYearPrice"
            style="@style/perPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yearly_perYear"
            app:layout_constraintBottom_toBottomOf="@+id/yearlyInfoView"
            app:layout_constraintEnd_toEndOf="@+id/yearlyInfoView"
            app:layout_constraintHorizontal_bias="0.149"
            app:layout_constraintStart_toStartOf="@+id/yearlyInfoView"
            app:layout_constraintTop_toBottomOf="@+id/perMonthPrice_Yearly"
            app:layout_constraintVertical_bias="0.29" />

        <TextView
            android:id="@+id/perYear"
            style="@style/per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/perYear"
            app:layout_constraintBottom_toBottomOf="@+id/yearlyInfoView"
            app:layout_constraintEnd_toEndOf="@+id/yearlyInfoView"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="@+id/yearlyInfoView"
            app:layout_constraintTop_toTopOf="@+id/yearlyInfoView"
            app:layout_constraintVertical_bias="0.798" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/yearlyInfoView"
            app:layout_constraintHorizontal_bias="0.583"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.154"
            app:srcCompat="@drawable/ic_button" />

        <TextView
            android:id="@+id/buttonText"
            style="@style/buttonText"
            android:layout_width="167dp"
            android:layout_height="30dp"
            android:text="@string/buttonText"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="385dp"
            android:layout_height="152dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.615"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
